services/20-core/home-assistant/20-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  strategy:
    rollingUpdate:
      maxSurge: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: homeassistant/home-assistant:0.100.3
          volumeMounts:
            - name: data
              mountPath: /config
            - name: zwave-device
              mountPath: /dev/zwave
            - name: zigbee-device
              mountPath: /dev/zigbee
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            privileged: true
      volumes:
        - name: data
          hostPath:
            path: /var/home-server/home-assistant
        - name: zwave-device
          hostPath:
            path: /dev/ttyACM0
        - name: zigbee-device
          hostPath:
            path: /dev/ttyUSB0
