services/20-core/home-assistant/210-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: zwave-js-server
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: zwave-js-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: zwave-js-server
  strategy:
    rollingUpdate:
      maxSurge: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zwave-js-server
    spec:
      containers:
        - name: zwave-js-server
          image: 'kpine/zwave-js-server:1.10.7-8.5.0'
          volumeMounts:
            - name: cache
              mountPath: /cache
            - name: zwave-device
              mountPath: /dev/zwave
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          securityContext:
            privileged: true
      volumes:
        - name: cache
          hostPath:
            path: /var/home-server/zwave-js-server
        - name: zwave-device
          hostPath:
            path: /dev/ttyACM0
