services/20-core/home-assistant/120-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  selector:
    app.kubernetes.io/name: home-assistant
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP

---
kind: Service
apiVersion: v1
metadata:
  name: sonos-integration
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  selector:
    app.kubernetes.io/name: home-assistant
  type: LoadBalancer
  loadBalancerIP: 10.0.0.83
  externalTrafficPolicy: Local
  ports:
    - port: 1400
      targetPort: 1400
      protocol: TCP
